Edit index.html and add icons

--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
 <body>
   <nav class="site-nav">
     <span class="site-nav_menu">
-
+      Menu
     </span>
     <ul class="site-nav_food-menu">
       <li class="site-nav_food-option">
-
+        Appetizers
       </li>
       <li class="site-nav_food-option">
-
+        Drinks
       </li>
       <li class="site-nav_food-option">
-
+        Main courses
       </li>
       <li class="site-nav_food-option">
-
+        Desserts
       </li>
       <li class="site-nav_food-option">
-
+        Reservations
       </li>
     </ul>
   </nav>
@@ -36,22 +36,35 @@
   <header class="site-header">
     <div class="site-header_image-wrapper">
       <h1 class="site-header_site-title">
-
+        Great Restaurant Welcomes
       </h1>
-      <h2 class="site-header_site-subtitle"></h2>
+      <h2 class="site-header_site-subtitle">
+        This is really great restaurant!
+      </h2>
     </div>
 
-    <span class="site-header_food-ad">
-
-    </span>
-    <span class="site-header_food-ad">
-
-    </span>
+    <section class="site-header_food-ad">
+      <span>
+        $19,99
+      </span>
+      <p>
+      Pyzy
+      </p>
+    </section>
+    <section class="site-header_food-ad">
+      <span>
+        $19,99
+      </span>
+      <p>
+      Pirogi
+      </p>
+    </section>
   </header>
+
   <main class="site-main">
     <div class="site-main_service-option">
       <span class="site-main-service-image">
-
+<div>Icons made by <a href="https://www.flaticon.com/authors/wa
       </span>
       <p class="site-main_service-description">
 
