--- a/index.html
+++ b/index.html
@@ -5,30 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta content="This is small restaurant page">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/footer.css">
   <title>Grid restaurant</title>
+<script src="https://kit.fontawesome.com/c1a856ce0f.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <nav class="site-nav">
-    <span class="site-nav_menu">
+
+    <span class="site-nav_menu-button">
+      <span class="site-nav_menu-button-burger fas fa-bars"></span>
+      <span class="site-nav_menu-button-x fas fa-times"></span>
       Menu
     </span>
+
     <ul class="site-nav_food-menu">
       <li class="site-nav_food-option">
-        Appetizers
+        <a href="index.html">Appetizers</a>
       </li>
       <li class="site-nav_food-option">
-        Drinks
+        <a href="index.html">Drinks</a>
       </li>
       <li class="site-nav_food-option">
-        Main courses
+        <a href="index.html">Main courses</a>
       </li>
       <li class="site-nav_food-option">
-        Desserts
+        <a href="index.html">Desserts</a>
       </li>
       <li class="site-nav_food-option">
-        Reservations
+        <a href="index.html">Reservations</a>
       </li>
     </ul>
   </nav>
@@ -63,35 +71,39 @@
 
   <main class="site-main">
     <div class="site-main_service-option">
+      <img src="icons/fork.png" alt="Fork">
       <span class="site-main-service-image">
-<div>Icons made by <a href="https://www.flaticon.com/authors/wa
+        Great food
       </span>
       <p class="site-main_service-description">
-
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, assumenda.
       </p>
     </div>
     <div class="site-main_service-option">
+      <img src="icons/orange.png" alt="Orange">
       <span class="site-main-service-image">
-
+        Healthy food
       </span>
       <p class="site-main_service-description">
-
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, assumenda.
       </p>
     </div>
     <div class="site-main_service-option">
+      <img src="icons/wine.png" alt="Wine">
       <span class="site-main-service-image">
-
+        Wine
       </span>
       <p class="site-main_service-description">
-
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, assumenda.
       </p>
     </div>
     <div class="site-main_service-option">
+      <img src="icons/music.png" alt="Music">
       <span class="site-main-service-image">
-
+        Music
       </span>
       <p class="site-main_service-description">
-
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, assumenda.
       </p>
     </div>
     <div class="site-main_service-promoted">
@@ -106,7 +118,7 @@
       </div>
     </div>
   </main>
-  <footer>
+  <footer class="site-footer">
     <h2 class="site-footer_title">
 
     </h2>
