Finish site header

--- a/index.html
+++ b/index.html
@@ -44,68 +44,75 @@
   <header class="site-header">
     <div class="site-header_image-wrapper">
       <h1 class="site-header_site-title">
-        Great Restaurant Welcomes
+        <span class="site-header_site-title-span">
+          Great Restaurant
+        </span>
       </h1>
       <h2 class="site-header_site-subtitle">
-        This is really great restaurant!
+        <span class="site-header_site-title-span">
+          This is really great restaurant!
+        </span>
       </h2>
     </div>
 
     <section class="site-header_food-ad">
-      <span>
+      <span class="site-header_food-price">
         $19,99
       </span>
-      <p>
+      <p class="site-header_food-desc">
       Pyzy
       </p>
     </section>
     <section class="site-header_food-ad">
-      <span>
-        $19,99
+      <span class="site-header_food-price">
+        $22,99
       </span>
-      <p>
-      Pirogi
+      <p class="site-header_food-desc">
+      Pierogi
       </p>
     </section>
-  </header>
 
+  </header>
   <main class="site-main">
-    <div class="site-main_service-option">
-      <img src="icons/fork.png" alt="Fork">
-      <span class="site-main-service-image">
-        Great food
-      </span>
-      <p class="site-main_service-description">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, assumenda.
-      </p>
+    <div class="site-main_wrapper">
+      <div class="site-main_service-option">
+        <img src="icons/fork.png" alt="Fork">
+        <span class="site-main-service-image">
+          Great food
+        </span>
+        <p class="site-main_service-description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, assumenda.
+        </p>
+      </div>
+      <div class="site-main_service-option">
+        <img src="icons/orange.png" alt="Orange">
+        <span class="site-main-service-image">
+          Healthy food
+        </span>
+        <p class="site-main_service-description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, assumenda.
+        </p>
+      </div>
+      <div class="site-main_service-option">
+        <img src="icons/wine.png" alt="Wine">
+        <span class="site-main-service-image">
+          Wine
+        </span>
+        <p class="site-main_service-description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, assumenda.
+        </p>
+      </div>
+      <div class="site-main_service-option">
+        <img src="icons/music.png" alt="Music">
+        <span class="site-main-service-image">
+          Music
+        </span>
+        <p class="site-main_service-description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, assumenda.
+        </p>
+      </div>
     </div>
-    <div class="site-main_service-option">
-      <img src="icons/orange.png" alt="Orange">
-      <span class="site-main-service-image">
-        Healthy food
-      </span>
-      <p class="site-main_service-description">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, assumenda.
-      </p>
-    </div>
-    <div class="site-main_service-option">
-      <img src="icons/wine.png" alt="Wine">
-      <span class="site-main-service-image">
-        Wine
-      </span>
-      <p class="site-main_service-description">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, assumenda.
-      </p>
-    </div>
-    <div class="site-main_service-option">
-      <img src="icons/music.png" alt="Music">
-      <span class="site-main-service-image">
-        Music
-      </span>
-      <p class="site-main_service-description">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, assumenda.
-      </p>
-    </div>
+
     <div class="site-main_service-promoted">
       <img src="" alt="This is great food image">
       <div class="site-main_promo-holder">
