Modify images and finish main part of site

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <main class="site-main">
     <div class="site-main_wrapper">
       <div class="site-main_service-option">
-        <img src="icons/fork.png" alt="Fork">
+        <img width="48px" height="48px" src="icons/fork.png" alt="Fork">
         <span class="site-main-service-image">
           Great food
         </span>
@@ -85,7 +85,7 @@
         </p>
       </div>
       <div class="site-main_service-option">
-        <img src="icons/orange.png" alt="Orange">
+        <img width="48px" height="48px" src="icons/orange.png" alt="Orange">
         <span class="site-main-service-image">
           Healthy food
         </span>
@@ -94,7 +94,7 @@
         </p>
       </div>
       <div class="site-main_service-option">
-        <img src="icons/wine.png" alt="Wine">
+        <img width="48px" height="48px" src="icons/wine.png" alt="Wine">
         <span class="site-main-service-image">
           Wine
         </span>
@@ -103,7 +103,7 @@
         </p>
       </div>
       <div class="site-main_service-option">
-        <img src="icons/music.png" alt="Music">
+        <img width="48px" height="48px" src="icons/music.png" alt="Music">
         <span class="site-main-service-image">
           Music
         </span>
@@ -114,20 +114,20 @@
     </div>
 
     <div class="site-main_service-promoted">
-      <img src="" alt="This is great food image">
+      <img src="img/pierogi.jpg" width="320" height="350" alt="This is great food image">
       <div class="site-main_promo-holder">
         <h3 class="site-main_promo-title">
-
+            Pierogi are so awesome!
         </h3>
         <p class="site-main_promo-desc">
-
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, assumenda.
         </p>
       </div>
     </div>
   </main>
   <footer class="site-footer">
     <h2 class="site-footer_title">
-
+      Instant Grams
     </h2>
     <div class="site-footer_image-wrapper">
       <img class="site-footer_image" src="" alt="">
