Finish footer site and edit main.css

--- a/index.html
+++ b/index.html
@@ -130,16 +130,16 @@
       Instant Grams
     </h2>
     <div class="site-footer_image-wrapper">
-      <img class="site-footer_image" src="" alt="">
-      <img class="site-footer_image" src="" alt="">
-      <img class="site-footer_image" src="" alt="">
-      <img class="site-footer_image" src="" alt="">
-      <img class="site-footer_image" src="" alt="">
-      <img class="site-footer_image" src="" alt="">
-      <img class="site-footer_image" src="" alt="">
-      <img class="site-footer_image" src="" alt="">
-      <img class="site-footer_image" src="" alt="">
-      <img class="site-footer_image" src="" alt="">
+      <img class="site-footer_image" width="300px" height="330px"src="img/anotherbread.jpg" alt="Nice picture">
+      <img class="site-footer_image" width="300px" height="330px"src="img/burger.jpg" alt="Nice picture">
+      <img class="site-footer_image" width="300px" height="330px"src="img/chicken.jpg" alt="Nice picture">
+      <img class="site-footer_image" width="300px" height="330px"src="img/bread.jpg" alt="Nice picture">
+      <img class="site-footer_image" width="300px" height="330px"src="img/deser.jpg" alt="Nice picture">
+      <img class="site-footer_image" width="300px" height="330px"src="img/pasta.jpg" alt="Nice picture">
+      <img class="site-footer_image" width="300px" height="330px"src="img/pancake.jpg" alt="Nice picture">
+      <img class="site-footer_image" width="300px" height="330px"src="img/pyza.jpg" alt="Nice picture">
+      <img class="site-footer_image" width="300px" height="330px"src="img/vegan.jpg" alt="Nice picture">
+      <img class="site-footer_image" width="300px" height="330px"src="img/vegandeser.jpg" alt="Nice picture">
     </div>
   </footer>
 </body>
